# 2025-12-rujira

./: Cargo.toml  LICENSE  NOTICE  README.md  RELEASES.md  config.toml  justfile  lcov.info  rust-toolchain.toml  taplo.toml  tx.json
docs/: README.md
