[workspace]
members = ["packages/*", "contracts/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anybuf                 = "0.5"
anyhow                 = "1"
cosmos-sdk-proto       = { version = "0.26.1", default-features = false, features = ["cosmwasm"] }
cosmwasm-schema        = "2.1.0"
cosmwasm-schema-derive = "2.1.3"
cosmwasm-std           = { version = "2.1.0", features = ["cosmwasm_2_0"] }
cw-multi-test          = { version = "2.4.0", features = ["cosmwasm_2_0"] }
cw-storage-plus        = "2.0.0"
cw-utils               = "2.0.0"
cw2                    = "2.0.0"
itertools              = "0.14.0"
postcard               = "1.1.1"
proptest               = "1.6.0"
prost                  = "0.13"
regex                  = "1.11.1"
rujira-bow             = { path = "./contracts/rujira-bow" }
rujira-fin             = { path = "./contracts/rujira-fin" }
rujira-ghost-vault     = { path = "./contracts/rujira-ghost-vault" }
rujira-rs              = { path = "./packages/rujira-rs", default-features = false }
rujira-rs-testing      = { path = "./packages/rujira-rs-testing" }
rujira-thorchain-swap  = { path = "./contracts/rujira-thorchain-swap" }
schemars               = "0.8.16"
serde                  = { version = "1.0.197", default-features = false, features = ["derive"] }
sha2                   = "0.10"
thiserror              = { version = "1.0.58" }


[profile.release]
debug            = false
debug-assertions = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
